# ML_workload_optimization

./: main.py  main_with_memory_stabilization.py  main_with_memory_stabilization_with_sleep.py
archive/: Makefile
lib/: alexnet_inf  alexnet_tensorrt_gen.py  batch_inference.py  batch_inference_alexnet.py  batch_inference_alexnet_without_lazyloading.py  batch_inference_alexnet_without_lazyloading_with_static_graph.py  batch_inference_alexnet_without_lazyloading_with_static_graph_without_gc.py  batch_inference_bert_tiny.py  batch_inference_customnet1.py  batch_inference_distilbert.py  batch_inference_mobilenet.py  batch_inference_mobilenet_without_lazyloading.py  batch_inference_mobilenet_without_lazyloading_with_static_graph.py  batch_inference_mobilenet_without_lazyloading_with_static_graph_without_gc.py  batch_inference_resnet.py  batch_inference_resnet_without_lazyloading.py  batch_inference_resnet_without_lazyloading_with_static_graph.py  batch_inference_vggnet.py  batch_inference_yolo.py  matmul  matmul.py  matmul_pycuda.py  matmul_tensorrt.py  matmul_tensorrt_gen.py  matmul_trt.pth  matrix_cuda_kernel.py  mobilenet_inf  nano_nvpmplus.py  power_profile.py  tegra_parse.py  tegrastats.py  test_garbage_collector.py  test_memory_log.py
lib/libtorch_make/alexnet/: CMakeLists.txt  alexnet_inf.cpp
logs/: alexnet_batch_inference_0_2023_02_03__00_15_06.txt  alexnet_batch_inference_0_2023_02_03__00_15_07.txt  alexnet_batch_inference_0_2023_02_03__00_15_08.txt  alexnet_batch_inference_0_2023_02_03__00_15_09.txt  alexnet_batch_inference_0_2023_02_03__00_15_10.txt  (+18 more)
(+20 files in other folders)
